# the-self-taught-computer-scientist

./: .gitignore  Makefile  pyproject.toml
tests/the_self_taught_computer_scientist/: test_anagram.py  test_graph.py  test_linkedlist.py  test_palindrome.py  test_queue.py  test_sort.py  test_stack.py  test_tree.py
the_self_taught_computer_scientist/: anagram.py  graph.py  linkedlist.py  palindrome.py  queue.py  sort.py  stack.py  tree.py
